javac_fix_utf8.log
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
.\gradlew.bat : C:\Use
rs\SSD\AndroidStudioPr
ojects\ASHASmartCare\a
pp\src\main\java\com\s
imats\ashasmartcare\ut
ils\AddChildVisitActiv
ity.java:37: error: 
cannot find symbol
At line:1 char:1
+ .\gradlew.bat :app:c
ompileDebugJavaWithJav
ac > javac_fix.log 
2>&1
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~
    + CategoryInfo    
          : NotSpeci  
  fied: (C:\Users\S   
 SD\An...not find     
symbol:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
        Toolbar 
toolbar = findViewById
(R.id.toolbar);
                      
                     ^
  symbol:   variable 
toolbar
  location: class id
C:\Users\SSD\AndroidSt
udioProjects\ASHASmart
Care\app\src\main\java
\com\simats\ashasmartc
are\utils\AddChildVisi
tActivity.java:40: 
error: cannot find 
symbol
        ImageView 
backBtn = findViewById
(R.id.btnBack);
                      
                      
 ^
  symbol:   variable 
btnBack
  location: class id
C:\Users\SSD\AndroidSt
udioProjects\ASHASmart
Care\app\src\main\java
\com\simats\ashasmartc
are\utils\AddChildVisi
tActivity.java:47: 
error: cannot find 
symbol
        recyclerView 
= findViewById(R.id.rv
Visits);
                      
                  ^
  symbol:   variable 
rvVisits
  location: class id
Note: Some input 
files use or override 
a deprecated API.
Note: Recompile with 
-Xlint:deprecation 
for details.
3 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/SSD/AndroidStudioProjects/ASHASmartCare/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for 
task ':app:compileDebu
gJavaWithJavac'.
> Compilation failed; 
see the compiler 
output below.
  C:\Users\SSD\Android
StudioProjects\ASHASma
rtCare\app\src\main\ja
va\com\simats\ashasmar
tcare\utils\AddChildVi
sitActivity.java:37: 
error: cannot find 
symbol
          Toolbar 
toolbar = findViewById
(R.id.toolbar);
                      
                      
 ^
    symbol:   
variable toolbar
    location: class id
  C:\Users\SSD\Android
StudioProjects\ASHASma
rtCare\app\src\main\ja
va\com\simats\ashasmar
tcare\utils\AddChildVi
sitActivity.java:40: 
error: cannot find 
symbol
          ImageView 
backBtn = findViewById
(R.id.btnBack);
                      
                      
   ^
    symbol:   
variable btnBack
    location: class id
  C:\Users\SSD\Android
StudioProjects\ASHASma
rtCare\app\src\main\ja
va\com\simats\ashasmar
tcare\utils\AddChildVi
sitActivity.java:47: 
error: cannot find 
symbol
          
recyclerView = findVie
wById(R.id.rvVisits);
                      
                    ^
    symbol:   
variable rvVisits
    location: class id
  Note: Some input 
files use or override 
a deprecated API.
  Note: Recompile 
with 
-Xlint:deprecation 
for details.
  3 errors

* Try:
> Check your code and 
dependencies to fix 
the compilation 
error(s)
> Run with --scan to 
get full insights.

BUILD FAILED in 1m 30s
20 actionable tasks: 1 executed, 19 up-to-date
